--- a/index.html
+++ b/index.html
@@ -2,24 +2,42 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Hello, I'm Tris</title>
-  <link rel="stylesheet" href="style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Hello from TihongChhiv</title>
+  <style>
+    body {
+      background: #0e0e52;
+      font-family: Arial, sans-serif;
+      color: white;
+      text-align: center;
+      padding: 50px;
+    }
+    .card {
+      background: #1a1a60;
+      padding: 30px;
+      border-radius: 10px;
+      max-width: 600px;
+      margin: auto;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.3);
+    }
+    .desc {
+      font-size: 14px;
+      margin-top: 20px;
+    }
+    img {
+      width: 150px;
+      border-radius: 10px;
+      margin-bottom: 20px;
+    }
+  </style>
 </head>
 <body>
   <div class="card">
-    <img src="doge.png" class="avatar" alt="Profile Picture" />
-    <h1>Hello, I'm TihongChhiv</h1>
-    <p>Computer Science Student</p>
-    <ul>
-      <li><strong>University:</strong> Assumption University of Thailand</li>
-      <li><strong>Major:</strong> Computer Science</li>
-      <li><strong>From:</strong> Cambodia</li>
-      <li><strong>Currently In:</strong> Thailand</li>
-    </ul>
-    <p class="desc">
-      Welcome to my page! I'm a passionate Computer Science student at Assumption University of Thailand...
-    </p>
+    <img src="IMG_0460.JPG" alt="My Photo" />
+    <h1>Hello, I'm Tihong Chhiv</h1>
+    <p>Computer Science Student at ABAC</p>
+    <p>from: Cambodia</p>
+    <p class="desc">Welcome to my simple GitHub Page</p>
   </div>
 </body>
 </html>
