--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <div class="card">
     <img src="IMG_0460.JPG" alt="My Photo" />
     <h1>Hello, I'm Tihong Chhiv</h1>
-    <p>Computer Science Student at ABAC</p>
-    <p>from: Cambodia</p>
+    <p> 💻   Computer Science Student at ABAC</p>
+    <p> 🇰🇭   from: Cambodia</p>
     <p class="desc">Welcome to my simple GitHub Page</p>
   </div>
 </body>
