--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
     <h1>Hello, I'm Tihong Chhiv</h1>
     <p> 💻   Computer Science Student at ABAC</p>
     <p> 🇰🇭   from: Cambodia</p>
-    <p class="desc">Welcome to my simple GitHub Page</p>
+    <p class="desc"> 😎   Welcome to my GitHub </p>
   </div>
 </body>
 </html>
